--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ plugins:
         - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Ian Outhwaite
 description: Honey, high jumping, and hiking. Loves cheesing but is lactose intolerant.
+logo: ./assets/iouthwaite_headshot.png
