--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-remote_theme: pages-themes/slate@v0.2.0
-plugins:
-        - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: Ian Outhwaite
-description: Honey, high jumping, and hiking. Loves cheesing but is lactose intolerant.
+#remote_theme: pages-themes/slate@v0.2.0
+#plugins:
+#        - jekyll-remote-theme # add this line to the plugins list if you already have one
+#title: Ian Outhwaite
+#description: Honey, high jumping, and hiking. Loves cheesing but is lactose intolerant.
