--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,9 @@ plugins:
         - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Ian Outhwaite
 description: Dynamic Solutions for Moving Targets
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - index.md
+  - About.md
