--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: pages-themes/slate@v0.2.0
 plugins:
         - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Ian Outhwaite
-description: MD/PhD Candidate | ian.outhwaite@stonybrookmedicine.edu
+description: MD/PhD Candidate
 relative_links:
   enabled: true
   collections: true
