--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,4 @@ relative_links:
   enabled: true
   collections: true
 # Google Analytics
-google_analytics: UA—XXXXXXXX-X
+google_analytics: G-7W6YD4RH9G
